--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
-markdown: rdiscount 
-
+markdown: rdiscount
+pygments: true
+permalink: /:year/:month/:day/:title.html
+name: setImpl
+markdown: rdiscount
