--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 markdown: rdiscount
 permalink: /:year/:month/:title/
-url: http://www.08optics.com
-author: 小兵blog
+url: http://geeklu.com
+author: 卢克
 pygments: true
 paginate: 16
